<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:background="@drawable/circular_bd"
                                             android:layout_marginTop="10dp"
                                             android:layout_height="wrap_content">

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/prod_image_view" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.029" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/product_image_desc"/>
    <TextView
            android:maxLines="3"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:id="@+id/prod_name_label" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/prod_image_view" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/prod_image_view" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/prod_unit_label"/>
    <Button
            android:text="@string/remove"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:id="@+id/remove_prod_btn" app:layout_constraintEnd_toStartOf="@+id/add_prod_btn"
            android:layout_marginTop="76dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/add"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:id="@+id/add_prod_btn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="76dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:textColor="@color/white"
            android:id="@+id/prod_price_label" app:layout_constraintEnd_toStartOf="@+id/remove_prod_btn"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/prod_image_view"
            android:layout_marginStart="8dp" android:layout_marginTop="96dp" app:layout_constraintTop_toTopOf="parent"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeMaxTextSize="50sp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/car_unit"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:id="@+id/prod_unit_label"
            app:layout_constraintBottom_toTopOf="@+id/remove_prod_btn"
            app:layout_constraintStart_toStartOf="@+id/remove_prod_btn" android:layout_marginStart="28dp"/>
    <Button
            android:gravity="center|top"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/redDark"
            android:textColor="@color/white"
            android:id="@+id/show_off_btn" app:layout_constraintStart_toEndOf="@+id/prod_image_view"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/prod_price_label"
            app:layout_constraintEnd_toStartOf="@+id/remove_prod_btn" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:text="@string/promo"/>


</android.support.constraint.ConstraintLayout>
